--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+<!--Timer-->
+<section class="topbox">
+    <h2>HURRY!!!</h2>
+    <h3 id="timerDisplay">00:30</h3>
+</section>
+
 <!--Building the questions and answer box-->
 <section class="box">
     <h1>JavaScript Quiz!</h2>
@@ -26,9 +32,3 @@
 </body>
 <script src="./assets/script.js"></script>
 </html>
-
-<!--
-timer
-highscores
-//check application within inspect in console
--->
