Bug fixed, now reloads page after /try again/, still no highscore

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
 <!--Timer-->
 <section class="topbox">
-    <h2>HURRY!!!</h2>
-    <h3 id="timerDisplay">00:30</h3>
+    <h2>JavaScript POP Quiz</h2>
+    <h3 id="timerDisplay">Let's GO!</h3>
 </section>
 
 <!--Building the questions and answer box-->
