final push, I don't know how to finish, yet. Added highscores and some styles

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!--Timer-->
 <section class="topbox">
-    <h2>JavaScript POP Quiz</h2>
+    <h2>POP_QUIZ!</h2>
     <h3 id="timerDisplay">Let's GO!</h3>
 </section>
 
@@ -27,8 +27,17 @@
             <button class="btn">Answer 4</button>
         </div>
             <button id="continue">Continue</button>
+        <!--Highscores-->
+        <div id ="score" class="score">
+            <div id="scoreArea" class="scoreArea"></div>
+            <form id="inName" class="inName"></form>
+            <div id="saveButton" class="saveButon"></div>
+        </div>
+        <div id ="highScores" class="highScores">
+            <div id="high-score-title"></div>
         </div>
 </section>
+    <script src="./assets/script.js"></script>
 </body>
-<script src="./assets/script.js"></script>
+
 </html>
